2002-04-29  Jeff Johnston  <jjohnstn@redhat.com>

        *  libc/include/sys/unistd.h (pread, pwrite): Added prototypes.
        *  libc/unix/Makefile.am: Add pread.c and pwrite.c.
        *  libc/sys/linux/Makefile.am: Add pread64.c and pwrite64.c.
        *  libc/sys/linux/Makefile.in: Regenerated.
        *  libc/unix/Makefile.in: Ditto.
        *  libc/sys/linux/pread64.c: New file.
        *  libc/sys/linux/pwrite64.c: Ditto.
        *  libc/unix/pread.c: Ditto.
        *  libc/unix/pwrite.c: Ditto.

2002-04-26  Jeff Johnston  <jjohnstn@redhat.com>

	*  libc/sys/linux/Makefile.am: Add io64.c.
	*  libc/sys/linux/Makefile.in: Regenerated.
	*  libc/sys/linux/io.c(mkfifo, fsync, fdatasync): Added syscalls.
	*  libc/sys/linux/signal.c (sigwaitinfo, sigtimedwait): Ditto. 
	*  libc/sys/linux/io64.c: New file.

2002-04-26  Jeff Johnston  <jjohnstn@redhat.com>

	* configure.in (CC_FOR_NEWLIB): New variable that
	bases on $(CC) and adds targ-include and libc/include as
	-isystem directives if they are not already part of $(CC).
	* Makefile.am (AM_MAKEFLAGS): Change setting of CC to equal
	$(CC_FOR_NEWLIB).
	* configure: Regenerated.
	* Makefile.in: Ditto.

2002-04-25  Jeff Johnston  <jjohnstn@redhat.com>

	*  libc/sys/linux/Makefile.am: Add support for sched.c.
	*  libc/sys/linux/Makefile.in: Regenerated.
	*  libc/sys/linux/sched.c: New file.
	*  libc/sys/linux/sys/types.h: Add struct timespec.

2002-04-25  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.in (CC_FOR_BUILD): Set to gcc whether
	cross-compiling or not.
	(CC): Add -isystem's for targ-include and libc/include when they
	do not already appear in CC.

2002-04-24  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (check-DEJAGNU): New target.
	(site.exp): Likewise.
	* acinclude.m4 (NEWLIB_CONFIGURE): Replace AC_CANONICAL_HOST
	with AC_CANONICAL_SYSTEM.  Remove AC_CANONICAL_BUILD.
	* libc/locale/locale.c (_setlocale_r): Add UTF-8 support.
	* libc/stdlib/mbtowc_r.c (_mbtowc_r): Likewise.